--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/walkerzheng/NodeWithReact#readme",
   "dependencies": {
-    "express": "^4.15.5"
+    "express": "^4.15.5",
+    "passport-google-oauth20": "^1.0.0",
+    "password": "^0.1.1"
   }
 }
