2-24 Testing Google Oauth

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/walkerzheng/NodeWithReact#readme",
   "dependencies": {
     "express": "^4.15.5",
+    "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "password": "^0.1.1"
   }
