--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "npm": "5.4.2"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
