--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/walkerzheng/NodeWithReact#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "concurrently": "^3.5.0",
     "cookie-session": "^1.3.2",
     "express": "^4.15.5",
@@ -31,6 +32,7 @@
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
-    "password": "^0.1.1"
+    "password": "^0.1.1",
+    "stripe": "^5.1.1"
   }
 }
