--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "password": "^0.1.1",
+    "sendgrid": "^5.2.3",
     "stripe": "^5.1.1"
   }
 }
