--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\" \"npm run webhook\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
-    "webhook": "lt -p 5000 -s walkerhaozheng1995"
+    "webhook": "lt -s walkerhaozheng1995 --port 5000"
   },
   "repository": {
     "type": "git",
@@ -31,11 +31,13 @@
     "cookie-session": "^1.3.2",
     "express": "^4.15.5",
     "localtunnel": "^1.8.3",
+    "lodash": "^4.17.4",
     "mongoose": "^4.11.13",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "password": "^0.1.1",
+    "path-parser": "^2.0.2",
     "sendgrid": "^5.2.3",
     "stripe": "^5.1.1"
   }
